refactor: rename the notebooks for the feasibility of the following the RAD229 lectures

--- a/notebooks/3a_2_rf_rotation_and_gradient_rotation.ipynb
+++ b/notebooks/3a_2_rf_rotation_and_gradient_rotation.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
     "    quiver.remove()  # Remove the old quiver\n",
     "    quiver = ax.quiver(0, 0, 0, spin_vector[0], spin_vector[1], spin_vector[2], \n",
     "                       color='r', arrow_length_ratio=0.2, lw=2)\n",
-    "    ax.scatter(spin_vector[0], spin_vector[1], spin_vector[2], color='r')\n",
+    "    ax.scatter(spin_vector[0], spin_vector[1], spin_vector[2], color='r', s=5)\n",
     "    fig.canvas.draw_idle()\n",
     "\n",
     "# Connect the slider to the update function\n",
