feat: update 3b lecture examples RF pulse on a gradient field

--- a/notebooks/3a_3_matrix_propagation.ipynb
+++ b/notebooks/3a_3_matrix_propagation.ipynb
@@ -119,60 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "sys.path.append(os.path.join('..'))\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib import colormaps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mr2mc(Mr):\n",
-    "    Mc = np.zeros((len(Mr), 3), dtype=complex)\n",
-    "    Mc[:,0] = Mr[:,0] + 1j * Mr[:,1]\n",
-    "    Mc[:,1] = Mr[:,0] - 1j * Mr[:,1]\n",
-    "    Mc[:,2] = Mr[:,2]\n",
-    "    return Mc\n",
-    "\n",
-    "def mc2mr(Mc):\n",
-    "    Mr = np.zeros((len(Mc), 3))\n",
-    "    Mr[:,0] = np.real(Mc[:,0])\n",
-    "    Mr[:,1] = np.imag(Mc[:,0])\n",
-    "    Mr[:,2] = np.real(Mc[:,2]) # actually the imaginary part should be zero\n",
-    "    return Mr\n",
-    "\n",
-    "def plotM(M, z):\n",
-    "    colors = colormaps[\"plasma\"](np.linspace(0,1,len(M)))\n",
-    "    fig, axs = plt.subplots(1,2)\n",
-    "    for i in range(len(M)):\n",
-    "        axs[0].quiver(0, \n",
-    "                0,\n",
-    "                M[i,0], \n",
-    "                M[i,1], \n",
-    "                scale=2,\n",
-    "                color = colors[i],\n",
-    "                )\n",
-    "        axs[1].quiver(0, \n",
-    "                z[i],\n",
-    "                M[i,0], \n",
-    "                M[i,2], \n",
-    "                scale=5,\n",
-    "                color = colors[i],\n",
-    "                )\n",
-    "    axs[0].set_xlabel('x')\n",
-    "    axs[0].set_ylabel('y')\n",
-    "    axs[1].set_xlabel('x')\n",
-    "    axs[1].set_ylabel('z')\n",
-    "    axs[0].set_aspect('equal')\n",
-    "    fig.suptitle(r'Magnetic moments after rotation by $\\pi$ along $z$ axis')\n",
-    "    fig.tight_layout()"
+    "from matplotlib import colormaps\n",
+    "from src import utils, visualizations as vis"
    ]
   },
   {
@@ -184,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +149,7 @@
     "M = np.array([np.ones(len(z)), z*0, z*0]).T\n",
     "\n",
     "ph = np.exp(np.pi * 1j * z)\n",
-    "phmult = np.array([ph, np.conj(ph), 0*ph]).T\n"
+    "phmult = np.array([ph, np.conj(ph), 0*ph]).T"
    ]
   },
   {
@@ -204,11 +161,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "M2 = mc2mr(phmult * mr2mc(M))"
+    "M2 = utils.mc2mr(phmult * utils.mr2mc(M))"
    ]
   },
   {
@@ -224,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plotM(M2, z)"
+    "vis.plotM(M2, z)"
    ]
   }
  ],
