feat: add mp4 saving option in rf_gradient

--- a/notebooks/3b_2_rf_gradient.ipynb
+++ b/notebooks/3b_2_rf_gradient.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
-    "%matplotlib widget\n",
+    "# %matplotlib widget\n",
     "\n",
     "import os\n",
     "import sys\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf = utils.msinc(Nrf, TB / 2)\n",
+    "rf = utils.msinc(Nrf, TB / 4)\n",
     "rf = rf * 90/ np.sum(rf)"
    ]
   },
@@ -70,8 +70,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(rf)\n",
-    "plt.title(\"RF Pulse\")"
+    "fig, axs = plt.subplots(1, figsize=(7,3))\n",
+    "axs.plot(rf, linewidth=4)\n",
+    "axs.set_title(\"RF Pulse\", fontsize=18)\n",
+    "axs.set_xlabel(\"Time\", fontsize=16)\n",
+    "axs.set_ylabel(\"Amplitude\", fontsize=16)"
    ]
   },
   {
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +125,9 @@
     "    \n",
     "    Mxy = (Txy @ utils.mc2mr(Mc).T).T\n",
     "\n",
-    "    Mrs.append(Mxy)\n",
+    "    # Mrs.append(Mxy)\n",
     "    # or for z component\n",
-    "    # Mrs.append(utils.mc2mr(Mc))"
+    "    Mrs.append(utils.mc2mr(Mc))"
    ]
   },
   {
@@ -150,14 +153,16 @@
     "def update(frame):\n",
     "    vis.plotM_animated(axs, Mrs[frame], z)\n",
     "    fig.tight_layout()\n",
-    "    fig.suptitle(f\"Frame {frame+1}/{num_frames}\")\n",
+    "    fig.suptitle(f\"Bloch Simulation: Slice Selection (frame {frame+1}/{num_frames})\")\n",
     "    \n",
     "\n",
     "# Create animation\n",
-    "ani = animation.FuncAnimation(fig, update, frames=num_frames, repeat=True)\n",
+    "ani = animation.FuncAnimation(fig, update, frames=num_frames, repeat=False)\n",
     "\n",
     "# Save as GIF\n",
-    "ani.save(\"../outputs/magnetic_moments.gif\", writer=\"pillow\", fps=10)"
+    "ani.save(\"../outputs/magnetic_moments.gif\", writer=\"pillow\", fps=10)\n",
+    "# # Save as Mp4\n",
+    "# ani.save(\"../outputs/magnetic_moments.mp4\", writer=\"ffmpeg\", fps=10)"
    ]
   },
   {
