feat: update with gradient refocusing

--- a/notebooks/3b_2_rf_gradient.ipynb
+++ b/notebooks/3b_2_rf_gradient.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
-    "# %matplotlib widget\n",
+    "%matplotlib widget\n",
     "\n",
     "import os\n",
     "import sys\n",
@@ -116,18 +116,26 @@
    "outputs": [],
    "source": [
     "Mrs = []\n",
+    "\n",
+    "# Excitation\n",
     "for k in range(Nrf):\n",
     "    R = T @ utils.rot_y(rf[k]) @ np.linalg.inv(T) # rotation in complex domain\n",
     "    \n",
     "    # rotate the magnetization by the amplitude of the RF pulse\n",
-    "    # apply the phase indeuced by the gradient field of the slice\n",
+    "    # apply the phase induced by the gradient field of the slice\n",
     "    Mc = phmult * (R @ Mc.T).T \n",
     "    \n",
     "    Mxy = (Txy @ utils.mc2mr(Mc).T).T\n",
     "\n",
-    "    # Mrs.append(Mxy)\n",
+    "    Mrs.append(Mxy)\n",
     "    # or for z component\n",
-    "    Mrs.append(utils.mc2mr(Mc))"
+    "    # Mrs.append(utils.mc2mr(Mc))\n",
+    "\n",
+    "# Refocusing\n",
+    "for k in range(int(np.floor(Nrf / 2)) + 4):\n",
+    "    Mc = np.conj(phmult) * Mc\n",
+    "    Mxy = (Txy @ utils.mc2mr(Mc).T).T\n",
+    "    Mrs.append(Mxy)"
    ]
   },
   {
@@ -138,31 +146,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To generate the gif comment the `widget` part at the beginning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "num_frames = len(Mrs)\n",
-    "# Set up figure\n",
-    "fig, axs = plt.subplots(1, 2, figsize=(8, 4))\n",
+    "# num_frames = len(Mrs)\n",
+    "# # Set up figure\n",
+    "# fig, axs = plt.subplots(1, 2, figsize=(8, 4))\n",
     "\n",
     "\n",
-    "# Animation function\n",
-    "def update(frame):\n",
-    "    vis.plotM_animated(axs, Mrs[frame], z)\n",
-    "    fig.tight_layout()\n",
-    "    fig.suptitle(f\"Bloch Simulation: Slice Selection (frame {frame+1}/{num_frames})\")\n",
+    "# # Animation function\n",
+    "# def update(frame):\n",
+    "#     vis.plotM_animated(axs, Mrs[frame], z)\n",
+    "#     fig.tight_layout()\n",
+    "#     fig.suptitle(f\"Bloch Simulation: Slice Selection (frame {frame+1}/{num_frames})\")\n",
     "    \n",
     "\n",
-    "# Create animation\n",
-    "ani = animation.FuncAnimation(fig, update, frames=num_frames, repeat=False)\n",
+    "# # Create animation\n",
+    "# ani = animation.FuncAnimation(fig, update, frames=num_frames, repeat=False)\n",
     "\n",
-    "# Save as GIF\n",
-    "ani.save(\"../outputs/magnetic_moments.gif\", writer=\"pillow\", fps=10)\n",
-    "# # Save as Mp4\n",
-    "# ani.save(\"../outputs/magnetic_moments.mp4\", writer=\"ffmpeg\", fps=10)"
+    "# # Save as GIF\n",
+    "# ani.save(\"../outputs/magnetic_moments.gif\", writer=\"pillow\", fps=10)\n",
+    "# # # Save as Mp4\n",
+    "# # ani.save(\"../outputs/magnetic_moments.mp4\", writer=\"ffmpeg\", fps=10)"
    ]
   },
   {
@@ -182,18 +197,27 @@
     "# Set up figure\n",
     "fig, axs = plt.subplots(1, 2, figsize=(8, 4))\n",
     "ax_slider = plt.axes([0.2, 0.02, 0.6, 0.03], facecolor='lightgoldenrodyellow')\n",
-    "slider = Slider(ax_slider, 'Frame', 0, 99, valinit=0, valstep=1)\n",
+    "slider = Slider(ax_slider, 'Frame', 0, 153, valinit=0, valstep=1)\n",
     "\n",
     "# Animation function\n",
     "def update(frame):\n",
     "    frame = slider.val\n",
+    "\n",
     "    vis.plotM_animated(axs, Mrs[frame], z)\n",
+    "\n",
     "    fig.suptitle(f\"Frame {frame+1}/{num_frames}\")\n",
     "\n",
     "# Connect the slider to the update function\n",
     "slider.on_changed(update)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
