feat: add saving in mp4 format

--- a/notebooks/3a_1_relaxiation_hom_object_uniform_field.ipynb
+++ b/notebooks/3a_1_relaxiation_hom_object_uniform_field.ipynb
@@ -75,17 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %matplotlib inline\n",
     "%matplotlib widget\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "sys.path.append(os.path.join('..'))\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from matplotlib.widgets import Slider\n",
-    "\n",
+    "from src import utils\n",
     "def rotation_matrix(theta):\n",
     "    return np.array([[np.cos(theta), np.sin(theta),0], [-np.sin(theta), np.cos(theta),0],[0,0,1]])"
    ]
@@ -216,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +228,10 @@
     "    M = np.array([1, 0, 0]) \n",
     "    E1 = np.exp(-tau/T1)\n",
     "    E2 = np.exp(-tau/T2)\n",
-    "    R_z = rotation_matrix(8.4*tau)\n",
+    "    # R_z = rotation_matrix(8.4*tau)\n",
+    "    # print(R_z)\n",
+    "    R_z = utils.rot_z(-np.rad2deg(8.4*tau))\n",
+    "    # print(R_z)\n",
     "    matrix = np.array([[E2, 0, 0], \n",
     "                        [0, E2, 0], \n",
     "                        [0, 0, E1]])\n",
@@ -265,7 +272,7 @@
     "ax.set_xlabel('X')\n",
     "ax.set_ylabel('Y')\n",
     "ax.set_zlabel('Z')\n",
-    "ax.set_title('Relaxation in the lab frame')\n",
+    "ax.set_title('Relaxation / Excitation in the lab frame')\n",
     "\n",
     "# Plot Bloch sphere\n",
     "u = np.linspace(0, 2 * np.pi, 100)\n",
@@ -281,7 +288,7 @@
     "\n",
     "# Add a slider for tau\n",
     "ax_slider = plt.axes([0.2, 0.02, 0.6, 0.03], facecolor='lightgoldenrodyellow')\n",
-    "slider = Slider(ax_slider, 'Time (tau)', 0, 3, valinit=initial_tau, valstep=0.1)\n",
+    "slider = Slider(ax_slider, 'Time (tau)', 0, 2, valinit=initial_tau, valstep=0.05)\n",
     "\n",
     "# Update function for the slider\n",
     "def update(val):\n",
@@ -300,6 +307,70 @@
     "slider.on_changed(update)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.animation as animation\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "# Parameters\n",
+    "T1 = 1.0\n",
+    "T2 = 0.5\n",
+    "time_steps = np.arange(0, 3.05, 0.05)  # Time steps for the animation\n",
+    "\n",
+    "line = np.linspace(-1, 1, 100)  # x-axis for plotting\n",
+    "\n",
+    "# Create a 3D plot\n",
+    "fig = plt.figure(figsize=(8, 6))\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "ax.plot(line, np.zeros(100), np.zeros(100), 'k--', lw=1)\n",
+    "ax.plot(np.zeros(100), line, np.zeros(100), 'k--', lw=1)\n",
+    "ax.plot(np.zeros(100), np.zeros(100), line, 'k--', lw=1)\n",
+    "ax.set_xlim([-1, 1])\n",
+    "ax.set_ylim([-1, 1])\n",
+    "ax.set_zlim([-1, 1])\n",
+    "ax.set_xlabel('X')\n",
+    "ax.set_ylabel('Y')\n",
+    "ax.set_zlabel('Z')\n",
+    "ax.set_title('Relaxation in the lab frame', fontsize=20)\n",
+    "\n",
+    "# Plot Bloch sphere\n",
+    "u = np.linspace(0, 2 * np.pi, 100)\n",
+    "v = np.linspace(0, np.pi, 100)\n",
+    "x = np.outer(np.cos(u), np.sin(v))\n",
+    "y = np.outer(np.sin(u), np.sin(v))\n",
+    "z = np.outer(np.ones(np.size(u)), np.cos(v))\n",
+    "ax.plot_surface(x, y, z, color='b', alpha=0.1)\n",
+    "\n",
+    "# Initial quiver (arrow)\n",
+    "initial_spin = relaxation_lab(0, T1, T2)\n",
+    "quiver = ax.quiver(0, 0, 0, initial_spin[0], initial_spin[1], initial_spin[2], \n",
+    "                   color='r', arrow_length_ratio=0.2, lw=2)\n",
+    "\n",
+    "# Animation function\n",
+    "def update(tau):\n",
+    "    global quiver\n",
+    "    spin_vector = relaxation_lab(tau, T1, T2)\n",
+    "    quiver.remove()\n",
+    "    quiver = ax.quiver(0, 0, 0, spin_vector[0], spin_vector[1], spin_vector[2], \n",
+    "                       color='r', arrow_length_ratio=0.2, lw=2)\n",
+    "    ax.scatter(spin_vector[0], spin_vector[1], spin_vector[2], color='r')\n",
+    "    return quiver,\n",
+    "\n",
+    "# Create the animation\n",
+    "ani = animation.FuncAnimation(fig, update, frames=time_steps, interval=150, blit=False)\n",
+    "\n",
+    "# Save as GIF\n",
+    "ani.save(\"../outputs/bloch_relaxation_lab.mp4\", writer=\"ffmpeg\", fps=5)\n",
+    "\n",
+    "plt.show()\n"
    ]
   }
  ],
